--- a/index.html
+++ b/index.html
@@ -121,24 +121,148 @@
                         <span class="img"></span>
                         <h2>Jared Padalecki</h2>
                         <p>Dean Vinchester</p>
+                        <span class="open-info info-left open-info-activ"></span>
                     </article>
                     <article class="team-center-left">
                         <span class="img"></span>
                         <h2>Jensen Ackles</h2>
                         <p>Sam Vinchester</p>
+                        <span class="open-info info-center-left"></span>
                     </article>
                     <article class="team-center-right">
                         <span class="img"></span>
                         <h2>Amy Gumenick</h2>
                         <p>Mary Vinchester</p>
+                        <span class="open-info info-center-right"></span>
                     </article>
                     <article class="team-right">
                         <span class="img"></span>
                         <h2>Misha Collins</h2>
                         <p>Castiel</p>
+                        <span class="open-info info-right"></span>
                     </article>
                 </div>
-            </div>
+                <div class="info-block block-one open-info-activ">
+                    <div class="full-info-left">
+                        <h2>Jared Padalecki</h2>
+                        <p>Monetization first mover advantage iPad. Interaction design buzz handshake. Stealth agile
+                            development branding. Backing facebook hackathon conversion startup scrum project niche
+                            market business-to-consumer paradigm shift traction. Rockstar
+                            bandwidth twitter ownership success disruptive series A financing user experience buyer
+                            client social proof validation hypotheses. User experience crowdfunding
+                            facebook seed round A/B testing mass market. </p>
+                    </div>
+                    <img class="share-social" src="./Image/all-social.png" alt="">
+                    <div class="full-info-right">
+                        <a class="share-social-icon" href="facebook.com">
+                            <img src="./Image/facebook-info.png" alt="facebook">
+                            <p>Facebook</p>
+                        </a>
+                        <a class="share-social-icon" href="twitter.com">
+                            <img src="./Image/twitter-info.png" alt="teitter">
+                            <p>Twitter</p>
+                        </a>
+                        <a class="share-social-icon" href="linkedin.com">
+                            <img src="./Image/linkedin-info.png" alt="linkedin">
+                            <p>Linkedin</p>
+                        </a>
+                        <a class="share-social-icon" href="Instargram.com">
+                            <img src="./Image/instagram-info.png" alt="instagram">
+                            <p>Instagram</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="info-block block-two">
+                    <div class="full-info-left">
+                        <h2>Jensen Ackles</h2>
+                        <p>Monetization first mover advantage iPad. Interaction design buzz handshake. Stealth agile
+                            development branding. Backing facebook hackathon conversion startup scrum project niche
+                            market business-to-consumer paradigm shift traction. Rockstar
+                            bandwidth twitter ownership success disruptive series A financing user experience buyer
+                            client social proof validation hypotheses. User experience crowdfunding
+                            facebook seed round A/B testing mass market. </p>
+                    </div>
+                    <img class="share-social" src="./Image/all-social.png" alt="">
+                    <div class="full-info-right">
+                        <a class="share-social-icon" href="facebook.com">
+                            <img src="./Image/facebook-info.png" alt="facebook">
+                            <p>Facebook</p>
+                        </a>
+                        <a class="share-social-icon" href="twitter.com">
+                            <img src="./Image/twitter-info.png" alt="teitter">
+                            <p>Twitter</p>
+                        </a>
+                        <a class="share-social-icon" href="linkedin.com">
+                            <img src="./Image/linkedin-info.png" alt="linkedin">
+                            <p>Linkedin</p>
+                        </a>
+                        <a class="share-social-icon" href="Instargram.com">
+                            <img src="./Image/instagram-info.png" alt="instagram">
+                            <p>Instagram</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="info-block block-tree">
+                    <div class="full-info-left">
+                        <h2>Amy Gumenick</h2>
+                        <p>Monetization first mover advantage iPad. Interaction design buzz handshake. Stealth agile
+                            development branding. Backing facebook hackathon conversion startup scrum project niche
+                            market business-to-consumer paradigm shift traction. Rockstar
+                            bandwidth twitter ownership success disruptive series A financing user experience buyer
+                            client social proof validation hypotheses. User experience crowdfunding
+                            facebook seed round A/B testing mass market. </p>
+                    </div>
+                    <img class="share-social" src="./Image/all-social.png" alt="">
+                    <div class="full-info-right">
+                        <a class="share-social-icon" href="facebook.com">
+                            <img src="./Image/facebook-info.png" alt="facebook">
+                            <p>Facebook</p>
+                        </a>
+                        <a class="share-social-icon" href="twitter.com">
+                            <img src="./Image/twitter-info.png" alt="teitter">
+                            <p>Twitter</p>
+                        </a>
+                        <a class="share-social-icon" href="linkedin.com">
+                            <img src="./Image/linkedin-info.png" alt="linkedin">
+                            <p>Linkedin</p>
+                        </a>
+                        <a class="share-social-icon" href="Instargram.com">
+                            <img src="./Image/instagram-info.png" alt="instagram">
+                            <p>Instagram</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="info-block block-four">
+                    <div class="full-info-left">
+                        <h2>Misha Collins</h2>
+                        <p>Monetization first mover advantage iPad. Interaction design buzz handshake. Stealth agile
+                            development branding. Backing facebook hackathon conversion startup scrum project niche
+                            market business-to-consumer paradigm shift traction. Rockstar
+                            bandwidth twitter ownership success disruptive series A financing user experience buyer
+                            client social proof validation hypotheses. User experience crowdfunding
+                            facebook seed round A/B testing mass market. </p>
+                    </div>
+                    <img class="share-social" src="./Image/all-social.png" alt="">
+                    <div class="full-info-right">
+                        <a class="share-social-icon" href="facebook.com">
+                            <img src="./Image/facebook-info.png" alt="facebook">
+                            <p>Facebook</p>
+                        </a>
+                        <a class="share-social-icon" href="twitter.com">
+                            <img src="./Image/twitter-info.png" alt="teitter">
+                            <p>Twitter</p>
+                        </a>
+                        <a class="share-social-icon" href="linkedin.com">
+                            <img src="./Image/linkedin-info.png" alt="linkedin">
+                            <p>Linkedin</p>
+                        </a>
+                        <a class="share-social-icon" href="Instargram.com">
+                            <img src="./Image/instagram-info.png" alt="instagram">
+                            <p>Instagram</p>
+                        </a>
+                    </div>
+                </div>
+
         </section>
         <section class="stats">
             <div class="container">
