--- a/index.html
+++ b/index.html
@@ -175,12 +175,10 @@
                 <div class="info-block block-two">
                     <div class="full-info-left">
                         <h2>Jensen Ackles</h2>
-                        <p>Monetization first mover advantage iPad. Interaction design buzz handshake. Stealth agile
-                            development branding. Backing facebook hackathon conversion startup scrum project niche
-                            market business-to-consumer paradigm shift traction. Rockstar
-                            bandwidth twitter ownership success disruptive series A financing user experience buyer
-                            client social proof validation hypotheses. User experience crowdfunding
-                            facebook seed round A/B testing mass market. </p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur quod rem libero, labore
+                            dolores et nemo fugit sed, id provident magnam assumenda quasi quam magni porro ducimus
+                            soluta tempora necessitatibus placeat! Ducimus enim sapiente similique maxime doloribus,
+                            esse laboriosam accusamus. </p>
                     </div>
                     <img class="share-social" src="./Image/all-social.png" alt="">
                     <div class="full-info-right">
@@ -235,12 +233,12 @@
                 <div class="info-block block-four">
                     <div class="full-info-left">
                         <h2>Misha Collins</h2>
-                        <p>Monetization first mover advantage iPad. Interaction design buzz handshake. Stealth agile
-                            development branding. Backing facebook hackathon conversion startup scrum project niche
-                            market business-to-consumer paradigm shift traction. Rockstar
-                            bandwidth twitter ownership success disruptive series A financing user experience buyer
-                            client social proof validation hypotheses. User experience crowdfunding
-                            facebook seed round A/B testing mass market. </p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero quis excepturi eaque,
+                            inventore vitae earum sequi nulla quam iure molestiae, delectus at deserunt, provident illum
+                            hic nisi velit vero beatae. Velit nisi quia numquam optio quisquam quas facilis dolorem eius
+                            animi sunt. Illum dolorem dolorum, quam placeat ullam beatae dicta aperiam adipisci laborum
+                            vel, iure, tempore culpa architecto ratione? Aperiam accusantium similique iusto eos unde
+                            sequi aspernatur officia, nihil nam? </p>
                     </div>
                     <img class="share-social" src="./Image/all-social.png" alt="">
                     <div class="full-info-right">
@@ -599,9 +597,9 @@
             </div>
         </div>
     </footer>
-    <script src="./js/jquery-pack.js" async></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" async></script>
-    <script src="./js/slick.min.js" async></script>
+    <script src="./js/jquery-pack.js" ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="./js/slick.min.js"></script>
     <script src="./js/slick.js" async></script>
     <script src="./js/js.js" async></script>
 </body>
