--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
                         <input type="text" name="text" placeholder="Project Budget" required>
                     </div>
                     <textarea name="article" placeholder="Your Message"></textarea>
-                    <input class="submit" type="submit" value="send massage">
+                    <input class="submit" type="submit" value="send message">
                 </form>
             </div>
         </section>
