--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="keywords" content="it-academy, work of the graduate, Fomenko Dmitry, Работа выпускника,">
     <meta name="description" content="The work of Fomenko Dmitry" />
     <meta property="og:image"
         content="https://yandex.by/images/_crpd/hhdda6497/8db529vyEKS/LacQHFvyamt39HSyH5q77bY7NoqAZX4pPXzNaSOs6uo81JYsxj3fFtSsky4PPcR4wEPJ4bgUFZ5tBQZ_e5kT17oxFk8OIepv9uTmYN2IfPqyOo" />
@@ -12,7 +13,7 @@
     <link rel="stylesheet" href="./css/slick-theme.css">
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
     <link rel="shortcut icon" href="./Image/favicon.ico" />
-    <title>Alexis site by Fomenko Dmitry</title>
+    <title>Alexis</title>
 </head>
 
 <body>
@@ -604,10 +605,10 @@
             <div class="footer-block-four">
                 <h3>Follow Us.</h3>
 
-                <a href="#"><img src="./Image/facebook.png" alt="facebook"></a>
-                <a href="#"><img src="./Image/twitter.png" alt="twitter"></a>
-                <a href="#"><img src="./Image/instagram.png" alt="Instagram"></a>
-                <a href="#"><img src="./Image/google.png" alt="google"></a>
+                <a href="https://www.facebook.com/"><img src="./Image/facebook.png" alt="facebook"></a>
+                <a href="https://twitter.com/"><img src="./Image/twitter.png" alt="twitter"></a>
+                <a href="https://www.instagram.com/"><img src="./Image/instagram.png" alt="Instagram"></a>
+                <a href="https://plus.google.com/"><img src="./Image/google.png" alt="google"></a>
             </div>
         </div>
     </footer>
