--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
 </head>
 
 <body>
+    <div class="loader">
+        <div class="item-1"></div>
+        <div class="item-2"></div>
+        <div class="item-3"></div>
+        <div class="item-4"></div>
+        <div class="item-5"></div>
+    </div>
     <header class="header">
         <div class="container">
             <a href="#">Alexis</a>
